--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-transition-group": "^4.4.5"
+    "react-swipeable": "^7.0.1",
+    "react-transition-group": "^4.4.5",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/node": "^20",
