--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@mui/material-nextjs": "^6.1.1",
+    "@mui/x-charts": "^7.18.0",
     "framer-motion": "^11.9.0",
     "hamburger-react": "^2.5.1",
     "next": "14.2.13",
